# project-file-platform

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
api/: Dockerfile
config/: app.toml
docs/: USAGE.md
mcp-server/: Dockerfile
migrations/: 0001_upload_sessions.sql  README.md
plan/: api-and-mcp-spec.md  architecture.md  file-management-solution.md  final-decisions.md  implementation-plan.md
src/project_file_platform/: __init__.py
src/project_file_platform/api/: main.py  migrations.py  models.py  path_utils.py  storage.py  upload_store.py
src/project_file_platform/common/: __init__.py  config.py  errors.py  logging_utils.py  response.py
src/project_file_platform/mcp/: server.py
tests/: test_api_e2e.py
web/: README.md
